--- a/Sources/Nested/introduction.tex
+++ b/Sources/Nested/introduction.tex
@@ -84,9 +84,7 @@ Any violations are statically detected and can be manually resolved by the
 programmer.
 %(for example by dropping one
 %of the conflicting field/methods from one of the parents). 
-This is very similar
-to existing trait models~\citep{fisher2004typed,
-  ducasse2006traits}. Therefore in an OO language
+This is very similar to existing trait models~\citep{scharli2003traits, Ducasse_2006}. Therefore in an OO language
 modelled on top of disjoint intersection types, coherence implies
 that no ambiguity arises from multiple inheritance. This makes
 reasoning a lot simpler.
