--- a/Sources/Traits/typesystem.tex
+++ b/Sources/Traits/typesystem.tex
@@ -109,13 +109,13 @@ types is straightforward.
   \drules[SDax]{$[[ AA **a BB ]]$}{Disjointness axiom}{intTrait, traitForall, traitRec}
 \end{small}
 \caption{Disjointness rules of \sedel (excerpt)}
-  \label{fig:disjoint}
+  \label{fig:disjoint:sedel}
 \end{figure}
 
 
 \paragraph{Disjointness.}
 
-\Cref{fig:disjoint} shows the disjointness rules for traits. The disjointness checking is the underlying
+\Cref{fig:disjoint:sedel} shows the disjointness rules for traits. The disjointness checking is the underlying
 mechanism of conflict detection. We naturally extend the disjointness rules in
 \fnamee to cover trait types. Here we discuss the rules
 related with traits. \Rref{SD-trait} says that as long as the functionalities
