--- a/Thesis.tex
+++ b/Thesis.tex
@@ -32,7 +32,7 @@
 
 \usepackage[%
   colorlinks = true,
-  citecolor  = RoyalBlue,
+  citecolor  = black,
   linkcolor  = RoyalBlue,
   urlcolor   = RoyalBlue,
   ]{hyperref}
