--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -49,7 +49,7 @@
 
 
 
-\newcommand\sedel{\textsf{SEDEL}\xspace}
+\newcommand\sedel{$\mathsf{SEDEL}$\xspace}
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
